feat: 弹窗中图表文字

--- a/vueDataV-master/package.json
+++ b/vueDataV-master/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "author": "JackChen <278910933@qq.com>",
   "scripts": {
-    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
+    "serve": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
