--- a/vueDataV-master/package.json
+++ b/vueDataV-master/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
     "sass": "^1.60.0",
     "vue": "^2.6.11",
